# dataops-pipeline-orchestrator

./: .env.example  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
infra/: prometheus.yml
pipeline/: http.py  run.py  settings.py
pipeline/extractors/: bacen.py  ibge.py
pipeline/loaders/: database.py  metrics.py
pipeline/transformers/: bacen.py  ibge.py
tests/: helpers.py  test_extractors.py  test_loader.py  test_transformers.py
tests/fixtures/: bacen_series_433.json  ibge_population.json
