[project]
name = "dataops-pipeline-orchestrator"
version = "0.1.0"
description = "Automated DataOps pipeline: extract, validate, upsert and observe public economic data."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: tests that need a real PostgreSQL instance (set TEST_DATABASE_URL)",
]
